--- a/Template.ipynb
+++ b/Template.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "dict_keys(['gcognos', 'ESW', 'esdm_new', 'esdm_old', 'cp4dProjectsApi', 'infocenter', 'dsw_appid', 'slackApi'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,18 +66,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection to DSS established: dstrateg \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sergioestrada/Library/CloudStorage/Box-Box/MY_DOCS/GITHUB/sergioeval/DatabaseConnectivity/Code/MasterConnector.py:105: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(sql, self.conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SQL Run Time:  0:00:00.472419\n",
+      "Connection closed\n"
+     ]
+    }
+   ],
    "source": [
     "data = DbConnector.sql_to_df(sql='select * from SODS2.BILLING limit 5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SAP_BILLG_DOC_NUM</th>\n",
+       "      <th>BILLG_DATE</th>\n",
+       "      <th>SAP_ACCTG_STAT_CODE</th>\n",
+       "      <th>SAP_BILLG_DOC_TYPE_CODE</th>\n",
+       "      <th>SAP_BILLG_CAT_CODE</th>\n",
+       "      <th>SAP_SALES_DOC_CAT_CODE</th>\n",
+       "      <th>SHIP_TO_CUST_NUM</th>\n",
+       "      <th>PAYER_CUST_NUM</th>\n",
+       "      <th>CURRNCY_CODE</th>\n",
+       "      <th>EXCHG_RATE_PLAN</th>\n",
+       "      <th>...</th>\n",
+       "      <th>CRM_RGN_CODE</th>\n",
+       "      <th>CRM_GEOGPHY_CODE</th>\n",
+       "      <th>WALLET_ID</th>\n",
+       "      <th>TRAN_GOVT_ENTITY_IND_CODE</th>\n",
+       "      <th>SRC_APPL</th>\n",
+       "      <th>SHIP_TO_CUST_NUM_RDC</th>\n",
+       "      <th>PAYER_CUST_NUM_RDC</th>\n",
+       "      <th>SAP_SALES_ORG_CODE_S4H</th>\n",
+       "      <th>SAP_CO_CODE_S4H</th>\n",
+       "      <th>SBSCRPTN_BILLG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0007229946</td>\n",
+       "      <td>2020-08-05</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Z1</td>\n",
+       "      <td>L</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0004123722</td>\n",
+       "      <td>0007963760</td>\n",
+       "      <td>INR</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ECC</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0145509794</td>\n",
+       "      <td>2020-08-05</td>\n",
+       "      <td>C</td>\n",
+       "      <td>ZBSM</td>\n",
+       "      <td>A</td>\n",
+       "      <td>O</td>\n",
+       "      <td>0003374343</td>\n",
+       "      <td>0003374343</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>0.01452</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ECC</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0145509793</td>\n",
+       "      <td>2020-08-05</td>\n",
+       "      <td>C</td>\n",
+       "      <td>ZBSM</td>\n",
+       "      <td>A</td>\n",
+       "      <td>O</td>\n",
+       "      <td>0003374343</td>\n",
+       "      <td>0003374343</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>0.01398</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ECC</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0007607447</td>\n",
+       "      <td>2020-08-05</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Z5</td>\n",
+       "      <td>A</td>\n",
+       "      <td>O</td>\n",
+       "      <td>0004123722</td>\n",
+       "      <td>0007963760</td>\n",
+       "      <td>INR</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ECC</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0126106632</td>\n",
+       "      <td>2020-08-05</td>\n",
+       "      <td>C</td>\n",
+       "      <td>ZCSM</td>\n",
+       "      <td>A</td>\n",
+       "      <td>O</td>\n",
+       "      <td>0003355842</td>\n",
+       "      <td>0007733682</td>\n",
+       "      <td>DKK</td>\n",
+       "      <td>15.77598</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ECC</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 70 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  SAP_BILLG_DOC_NUM  BILLG_DATE SAP_ACCTG_STAT_CODE SAP_BILLG_DOC_TYPE_CODE  \\\n",
+       "0        0007229946  2020-08-05                   C                    Z1     \n",
+       "1        0145509794  2020-08-05                   C                    ZBSM   \n",
+       "2        0145509793  2020-08-05                   C                    ZBSM   \n",
+       "3        0007607447  2020-08-05                   C                    Z5     \n",
+       "4        0126106632  2020-08-05                   C                    ZCSM   \n",
+       "\n",
+       "  SAP_BILLG_CAT_CODE SAP_SALES_DOC_CAT_CODE SHIP_TO_CUST_NUM PAYER_CUST_NUM  \\\n",
+       "0                  L                      M       0004123722     0007963760   \n",
+       "1                  A                      O       0003374343     0003374343   \n",
+       "2                  A                      O       0003374343     0003374343   \n",
+       "3                  A                      O       0004123722     0007963760   \n",
+       "4                  A                      O       0003355842     0007733682   \n",
+       "\n",
+       "  CURRNCY_CODE  EXCHG_RATE_PLAN  ...  CRM_RGN_CODE  CRM_GEOGPHY_CODE  \\\n",
+       "0          INR          1.00000  ...          None              None   \n",
+       "1          USD          0.01452  ...          None              None   \n",
+       "2          USD          0.01398  ...          None              None   \n",
+       "3          INR          1.00000  ...          None              None   \n",
+       "4          DKK         15.77598  ...          None              None   \n",
+       "\n",
+       "   WALLET_ID  TRAN_GOVT_ENTITY_IND_CODE SRC_APPL SHIP_TO_CUST_NUM_RDC  \\\n",
+       "0       None                       None      ECC                 None   \n",
+       "1       None                       None      ECC                 None   \n",
+       "2       None                       None      ECC                 None   \n",
+       "3       None                       None      ECC                 None   \n",
+       "4       None                       None      ECC                 None   \n",
+       "\n",
+       "  PAYER_CUST_NUM_RDC SAP_SALES_ORG_CODE_S4H SAP_CO_CODE_S4H SBSCRPTN_BILLG  \n",
+       "0               None                   None            None           None  \n",
+       "1               None                   None            None           None  \n",
+       "2               None                   None            None           None  \n",
+       "3               None                   None            None           None  \n",
+       "4               None                   None            None           None  \n",
+       "\n",
+       "[5 rows x 70 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.head()"
    ]
@@ -360,6 +598,34 @@
    "source": [
     "data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example for a MySql db "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
